--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -19,7 +19,8 @@
     <string name="crashedWebViewErrorAction">"Reload"</string>
 
     <!-- System Search-->
-    <string name="system_search_app_label">From this device</string>
+    <string name="systemSearchDeviceAppLabel">From this device</string>
+    <string name="systemSearchAppNotFound">Application could not be found</string>
 
     <!-- New Onboarding Experience -->
     <string name="onboardingWelcomeTitle">"Welcome to DuckDuckGo!"</string>
