Removing any reference to OnboardingActivity

--- a/app/src/main/res/layout-land/content_onboarding_default_browser.xml
+++ b/app/src/main/res/layout-land/content_onboarding_default_browser.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent"
     android:tag="onboardingDefaultBrowser"
     tools:background="@color/white"
-    tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
+    tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivityExperiment">
 
     <Button
         android:id="@+id/continueButton"
