--- a/app/src/main/res/layout/content_onboarding_unified_summary.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_summary.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent"
     android:tag="onboardingProtect"
     tools:background="@color/white"
-    tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
+    tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivityExperiment">
 
     <ScrollView
         android:id="@+id/scrollView"
