--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -180,7 +180,14 @@
         <item name="backgroundTint">@color/cornflowerBlue</item>
     </style>
 
-    <style name="OnboardingButtonPrimaryRoundedCta" parent="OnboardingButtonPrimaryCta">
+    <style name="OnboardingButtonPrimaryRoundedCta">
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="layout_constraintWidth_max">400dp</item>
+        <item name="layout_constraintWidth_percent">0.8</item>
+        <item name="backgroundTint">@color/cornflowerBlue</item>
         <item name="android:background">@drawable/onboarding_primary_cta_button_rounded_bg</item>
         <item name="android:textAllCaps">false</item>
     </style>
@@ -200,58 +207,6 @@
     <style name="OnboardingButtonSecondaryRoundedCta" parent="OnboardingButtonSecondaryCta">
         <item name="android:background">@drawable/onboarding_secondary_cta_button_rounded_bg</item>
         <item name="android:textAllCaps">false</item>
-    </style>
-
-    <style name="OnboardingTextTitle">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">@dimen/onboardingTitleMarginTop</item>
-        <item name="android:fontFamily">sans-serif-black</item>
-        <item name="android:lineSpacingExtra">3.5sp</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:textColor">@color/almostBlack</item>
-        <item name="android:textSize">34sp</item>
-    </style>
-
-    <style name="OnboardingTextSubtitle">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:lineSpacingExtra">3.75sp</item>
-        <item name="android:textColor">@color/brownishGrayTwo</item>
-        <item name="android:textSize">@dimen/onboardingSubtitleTextSize</item>
-        <item name="android:layout_marginTop">4dp</item>
-    </style>
-
-    <style name="OnboardingListItemImage">
-        <item name="android:layout_width">64dp</item>
-        <item name="android:layout_height">64dp</item>
-    </style>
-
-    <style name="OnboardingListItem">
-        <item name="android:paddingStart">2dp</item>
-        <item name="android:paddingEnd">2dp</item>
-        <item name="android:paddingBottom">10dp</item>
-    </style>
-
-    <style name="OnboardingListItemTitle">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">8dp</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textColor">@color/almostBlack</item>
-        <item name="android:textSize">17sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="OnboardingListItemSubtitle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/brownishGrayTwo</item>
-        <item name="android:textSize">15sp</item>
     </style>
 
     <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
