--- a/app/src/main/res/layout/item_autocomplete_no_suggestions.xml
+++ b/app/src/main/res/layout/item_autocomplete_no_suggestions.xml
@@ -18,8 +18,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="14dp"
-    android:paddingBottom="4dp">
+    android:layout_marginBottom="22dp"
+    android:layout_marginTop="8dp">
 
     <TextView
         android:layout_width="match_parent"
