--- a/app/src/main/res/drawable/background_grey_border.xml
+++ b/app/src/main/res/drawable/background_grey_border.xml
@@ -16,7 +16,7 @@
   -->
 
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="?colorAccent">
+    android:color="@color/grayishBrown">
     <item>
         <shape android:shape="oval">
             <padding
