Add small onboarding

--- a/app/src/main/res/layout/activity_system_search.xml
+++ b/app/src/main/res/layout/activity_system_search.xml
@@ -107,12 +107,12 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/results"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:elevation="4dp"
         android:paddingBottom="4dp"
-        android:id="@+id/results"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -122,13 +122,19 @@
             android:backgroundTint="?attr/colorPrimary"
             android:elevation="4dp">
 
+            <include
+                android:id="@+id/onboarding"
+                layout="@layout/include_system_search_onboarding"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/autocompleteSuggestions"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/onboarding"
                 tools:itemCount="4"
                 tools:listitem="@layout/item_autocomplete_search_suggestion" />
 
