--- a/app/src/main/res/layout/include_system_search_onboarding.xml
+++ b/app/src/main/res/layout/include_system_search_onboarding.xml
@@ -19,7 +19,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/onboarding"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
@@ -51,13 +51,14 @@
         android:layout_marginBottom="12dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
-        android:text="@string/systemSearchOnboardingTitle"
+        android:text="@string/duckDuckGoPrivacySimplified"
         android:textColor="?attr/normalTextColor"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/onboardingIcon" />
+        app:layout_constraintTop_toBottomOf="@id/onboardingIcon"
+        app:layout_constraintWidth_max="300dp" />
 
     <TextView
         android:id="@+id/onboardingText"
@@ -75,7 +76,74 @@
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/onboardingTitle" />
+        app:layout_constraintTop_toBottomOf="@id/onboardingTitle"
+        app:layout_constraintWidth_max="300dp" />
+
+    <LinearLayout
+        android:id="@+id/checkmarks"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="12dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@id/onboardingText"
+        app:layout_constraintStart_toStartOf="@id/onboardingText"
+        app:layout_constraintTop_toBottomOf="@id/onboardingText"
+        tools:visibility="visible">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="6dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/systemSearchOnboaringFeaturesIntroText"
+            android:textColor="?attr/normalTextColor"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
+            android:drawableStart="@drawable/ic_success"
+            android:drawablePadding="12dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/systemSearchOnboaringFeatureOneText"
+            android:textColor="?attr/normalTextColor"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
+            android:drawableStart="@drawable/ic_success"
+            android:drawablePadding="12dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/systemSearchOnboaringFeatureTwoText"
+            android:textColor="?attr/normalTextColor"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
+            android:drawableStart="@drawable/ic_success"
+            android:drawablePadding="12dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/systemSearchOnboaringFeatureThreeText"
+            android:textColor="?attr/normalTextColor"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/okButton"
@@ -92,11 +160,12 @@
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/onboardingText" />
+        app:layout_constraintTop_toBottomOf="@id/checkmarks" />
 
     <Button
+        android:id="@+id/toggleButton"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
@@ -108,7 +177,6 @@
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/okButton"
-        app:layout_constraintTop_toBottomOf="@id/onboardingText" />
-
+        app:layout_constraintTop_toBottomOf="@id/checkmarks" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
