--- a/app/src/main/res/layout/content_about_duck_duck_go.xml
+++ b/app/src/main/res/layout/content_about_duck_duck_go.xml
@@ -52,7 +52,7 @@
             android:layout_marginBottom="20dp"
             android:fontFamily="sans-serif"
             android:lineSpacingExtra="6sp"
-            android:text="@string/aboutHeading"
+            android:text="@string/duckDuckGoPrivacySimplified"
             android:textAlignment="center"
             android:textColor="?attr/normalTextColor"
             android:textSize="20sp"
