Make title bar color primary color so it is continuous with omnibar

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,6 +28,7 @@
         <item name="windowNoTitle">true</item>
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
         <item name="android:windowActivityTransitions">true</item>
+        <item name="android:statusBarColor">?colorPrimary</item>
     </style>
 
     <style name="AppTheme.BaseDark">
