--- a/app/src/main/res/layout/activity_system_search.xml
+++ b/app/src/main/res/layout/activity_system_search.xml
@@ -67,7 +67,7 @@
                     android:layout_marginEnd="16dp"
                     android:background="@android:color/transparent"
                     android:fontFamily="sans-serif-medium"
-                    android:hint="@string/omnibarInputHint"
+                    android:hint="@string/systemSearchOmnibarInputHint"
                     android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
                     android:inputType="textUri|textNoSuggestions"
                     android:maxLines="1"
