Add onboarding to bottom and update asset name

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,4 +33,6 @@
     <dimen name="settingsItemHorizontalPadding">20dp</dimen>
     <dimen name="onboardingTitleMarginTop">20dp</dimen>
 
+    <dimen name="systemSearchResultsElevation">4dp</dimen>
+
 </resources>
