--- a/app/src/main/res/layout/activity_system_search.xml
+++ b/app/src/main/res/layout/activity_system_search.xml
@@ -111,7 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:elevation="4dp"
+        android:elevation="@dimen/systemSearchResultsElevation"
         android:paddingBottom="4dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -120,13 +120,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            android:backgroundTint="?attr/colorPrimary"
+            android:clipToPadding="false"
             android:elevation="4dp">
-
-            <include
-                layout="@layout/include_system_search_onboarding"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/autocompleteSuggestions"
@@ -134,7 +129,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/onboarding"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:itemCount="4"
                 tools:listitem="@layout/item_autocomplete_search_suggestion" />
 
@@ -163,6 +158,8 @@
                 app:layout_constraintTop_toBottomOf="@id/deviceLabel"
                 tools:itemCount="4"
                 tools:listitem="@layout/item_device_app_suggestion" />
+
+            <include layout="@layout/include_system_search_onboarding" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
