added simple dialog to confirm the icon selection

--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -62,5 +62,7 @@
     <!-- Change Icon Activity -->
     <string name="changeIconActivityTitle">App Icon</string>
     <string name="changeIconCtaLabel">Change App Icon</string>
+    <string name="changeIconDialogTitle">Change App Icon</string>
+    <string name="changeIconDialogMessage">We need to close the app in order to apply the changes, go find your handsome new app icon!</string>
 
 </resources>
